Fix report header alignment

--- a/src/app/components/Report.scss
+++ b/src/app/components/Report.scss
@@ -85,3 +85,9 @@
     stroke: #fff;
   }
 }
+
+.layout_header_date_range .header_button {
+  margin-top: 5px;
+  margin-left: 5px;
+
+}
